--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
+:root {
+  --vPrimaryColor: #bed989;
+  --vSecondaryColor: #5f7434;
+  --vThirdColor: #d66a2b;
+  --vTitleColor: #555;
+
+}
+
+h1,
+h2,
+h3,
+label,
+b,
+i,
+footer,
+legend {
+  margin: 0px;
+  padding: 0px;
+  color: var(--vTitleColor) !important;
+  font-size: clamp(20px, calc(0.2rem + 0.5vw + 0.5vh), 26px) !important;
+}
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f1f2f6;
+}
+
+.App>header {
+  background-color: var(--vPrimaryColor);
+}
+
+.App>section {
+  flex-grow: 1;
+  overflow: auto;
+}
+
+.App>section>div>#navGipp {
+  font-size: clamp(20px, calc(0.2rem + 0.5vw + 0.5vh), 26px) !important;
+  border-right: solid clamp(1px, calc(0.2rem + 0.5vw + 0.5vh), 2px) #c1c2c6;
+}
+
+.App>section>div>#navGipp a:hover {
+  color: var(--vThirdColor) !important;
+}
+
+.App>footer {
+  background-color: var(--vPrimaryColor);
+  white-space: nowrap;
+  /* Impede a quebra de linha */
+  overflow: hidden;
+  /* Esconde o texto que ultrapassa o espaço */
+  text-overflow: ellipsis;
+  /* Adiciona "..." ao final do texto */
+  font-size: clamp(12px, calc(0.12rem + 0.5vw + 0.5vh), 26px) !important;
+}
+
+#loginCustomForm {
+  background-color: rgba(255, 255, 255, 1);
+}
+
+#loginCustomForm button {
+  color: white;
+  font-weight: bolder;
+  background-color: var(--vPrimaryColor);
+}
+
+#loginCustomForm button:hover {
+  background-color: var(--vSecondaryColor);
+}
+
+.StructureModal {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.ModalBgWhite {
+  background-color: rgba(255, 255, 255, .5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.ModalBgBlack {
+  background-color: rgba(0, 0, 0, .5);
+}
+
+/* Define a classe para a animação */
+.spinner-grow-img {
+  display: inline-block;
+  width: 100px;
+  /* Ajuste o tamanho conforme necessário */
+  height: 100px;
+  animation: spinner-grow 2s infinite ease-in-out;
+  /* Animação aplicada */
+}
+
+/* Keyframes para a animação */
+@keyframes spinner-grow {
+  0% {
+    transform: scale(0);
+    /* Começa invisível e muito pequeno */
+    opacity: 0;
+    /* Totalmente transparente */
   }
-  to {
-    transform: rotate(360deg);
+
+  50% {
+    transform: scale(1);
+    /* Cresce ao tamanho original */
+    opacity: 1;
+    /* Totalmente visível */
   }
+
+  100% {
+    transform: scale(0);
+    /* Diminui até desaparecer */
+    opacity: 0;
+    /* Totalmente transparente novamente */
+  }
+
 }
