--- a/src/Modules/GTPP/components/Card/style.card.css
+++ b/src/Modules/GTPP/components/Card/style.card.css
@@ -1,4 +1,100 @@
 .box-cardTask {
-    width: 100px !important;
-    /* height: clamp(20px, 100%, 120px); */
+    width: 100%; 
+    max-width: var(--card-width-max);
+    height: auto; 
 }
+
+.box-shadow {
+    box-shadow: var(--card-shadow);
+}
+
+.card {
+    width: clamp(var(--card-width-min), 50vw, var(--card-width-max)); 
+    height: clamp(var(--card-height-min), 50vh, var(--card-height-max)); 
+    padding: var(--card-padding);
+    border: 1px solid #ccc;
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--card-shadow);
+    transition: all var(--transition-speed) ease-in-out;
+    background-color: #FFF; 
+    color: #000000; 
+
+    #task-description {
+        position: absolute;
+        border: 1px solid black;
+        border-radius: 11px;
+        z-index: 1;
+    }
+}
+
+.border-light.position-absolute{
+  bottom: -282px;
+  left: 95px;
+  border: 1px solid #000 !important;
+}
+
+.card:hover {
+    box-shadow: var(--shadow-hover); 
+}
+
+.card-title {
+    font-size: clamp(var(--font-size-title-min), 2vw, var(--font-size-title-max)); 
+}
+
+.card p {
+    font-size: clamp(var(--font-size-text-min), 1.5vw, var(--font-size-text-max)); 
+}
+
+.card-icon {
+    position: absolute;
+    top: -40px;
+    right: -30px;
+    height: auto;
+    max-height: 280px;
+}
+
+  .add-user {
+    left: 15px;
+    bottom: 6px;
+  }
+
+  .cardTask {
+    position: relative;
+  }
+  
+  .card-title {
+    font-size: 1.25rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  
+  .card-icons {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .icon-btn {
+    font-size: 1.2rem;
+  }
+  
+  .user-toggle-btn {
+    display: flex;
+    align-items: center;
+  }
+  
+  .employee-img {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .employee-name {
+    font-size: 1rem;
+  }
+  
+  @media (min-width: 768px) {
+    .cardTask {
+      /* Adicione estilos adicionais para telas maiores, se necessário */
+    }
+  }
+  
