--- a/src/Modules/GTPP/components/CollapseAll/CollapseAll.style.css
+++ b/src/Modules/GTPP/components/CollapseAll/CollapseAll.style.css
@@ -10,7 +10,7 @@
   .dropdown__face,
   .dropdown__items {
     background-color: #fff;
-    padding: 15px;
+    padding: 8px;
     border-radius: 25px;
   }
   
@@ -20,6 +20,12 @@
     align-items: center;
     cursor: pointer;
     position: relative;
+  }
+
+  .dropdown__text {
+    font-size: 16px;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-weight: bold;
   }
   
   .dropdown__items {
