--- a/src/Modules/CLPP/Clpp.css
+++ b/src/Modules/CLPP/Clpp.css
@@ -26,3 +26,41 @@
     color:var(--vSecondaryColor);
     font-size: clamp(2px, calc(0.8rem + 4vw + 4vh), 28px);
 }
+
+.cardContact{
+    display: flex;
+    font-size: clamp(2px, calc(0.15rem + 1vw + 1vh), 14px);
+    height: clamp(2px, calc(6rem + 10vw + 10vh), 100px);
+    width: 100%;
+}
+.cardContact>div>header,#cardUser>div>header{
+    width: clamp(50px, calc(0.8rem + 4vw + 4vh), 65px);
+    height: clamp(50px, calc(0.8rem + 4vw + 4vh), 65px);
+    max-width: 20%;
+}
+.cardContact>div>header>img{
+    width: 100%;
+    height: 100%;
+}
+.cardContact>div>div{
+    flex-grow: 1;
+}
+.cardContact>div>button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10%;
+    height: 100%;
+    background-color: var(--vPrimaryColor);
+}
+.cardContact>div>button:hover{
+    background-color: var(--vSecondaryColor);
+}
+
+.cardContact>div>button:hover i{
+    color: white !important;
+}
+.cardContact>div>button>i{
+    color: var(--vSecondaryColor) !important;
+
+}
