--- a/src/Modules/GTPP/ComponentsCard/CardTask/CardTask.css
+++ b/src/Modules/GTPP/ComponentsCard/CardTask/CardTask.css
@@ -57,6 +57,15 @@
     width: var(--modal-width-xsmall);
     height: var(--modal-height-xsmall) * 2;
   }
+
+
+  .modal-Xsmall:active {
+    /* -webkit-box-shadow: inset -2px -2px 4px 2px rgba(94, 94, 94, 0.3);
+    -moz-box-shadow: inset -2px -2px 4px 2px rgba(94, 94, 94, 0.1); */
+    box-shadow: inset 0px 0px 8px 2px rgba(0, 0, 0, 0.1); 
+
+
+  }
   
   /* Cabeçalho do modal */
   .modal-header {
