--- a/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
+++ b/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
@@ -21,10 +21,20 @@
     
     padding: 0.35rem 1rem;
     
-    position: sticky;
+    /* position: sticky;
     top: 0;
     z-index: 10;
-    border-radius: 6px 6px 0 0;
+    border-radius: 6px 6px 0 0; */
+}
+
+.save {
+    
+}
+.file {
+    
+}
+.add {
+    
 }
 
 .columnTaskState-title h1 {
