Im to some ajustments in component of adding a task and Iam to do redering of tasks with interacted

--- a/src/Modules/GTPP/Gtpp.css
+++ b/src/Modules/GTPP/Gtpp.css
@@ -11,8 +11,13 @@
 }
 
 .bodyCard {
-    height: 60% !important;
+    height: 43% !important;
     width: 25% !important;
+}
+
+.bodyCard button {
+    margin: 0px !important;
+    margin-top: 5px !important;
 }
 
 .form-register label {
