--- a/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
+++ b/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
@@ -4,7 +4,7 @@
 .columnTaskState-container {
     width: 100%;
     height: 100%;
-    max-height: 80vh;
+    max-height: 68vh;
     overflow-y: auto;
     overflow-x: hidden;
     border: 1px solid #b5b5b53e;
@@ -18,6 +18,7 @@
 .columnTaskState-title {
     text-align: center;
     width: clamp(0.9rem, 100vw, 250px);
+    /* width: 100%; */
     
     padding: 0.35rem 1rem;
     
@@ -64,17 +65,22 @@
 /* Responsividade para dispositivos móveis */
 @media (max-width: 768px) {
     .columnTaskState-container {
-        max-width: 100%;
+        max-height: 68vh;
     }
+}
 
-    .columnTaskState-title {
-        width: 100%;
-        border-radius: 6px;
+@media (min-width: 900px) {
+    .columnTaskState-container {
+        max-height: 70vh;
     }
 }
 
 @media (min-width: 1200px) {
     .columnTaskState-container {
         max-width: 400px;
+    }
+
+    .columnTaskState-container {
+        max-height: clamp(1vh, 70vh, calc(100vh - 20vh));
     }
 }
