--- a/src/Modules/GTPP/Gtpp.css
+++ b/src/Modules/GTPP/Gtpp.css
@@ -11,8 +11,8 @@
 }
 
 .bodyCard {
-    height: 43% !important;
-    width: 25% !important;
+    width: clamp(300px, 100%, calc(100% - 1250px)) !important;
+    height: clamp(400px, 100%, calc(100% - 1250px)) !important;
 }
 
 .bodyCard button {
