--- a/src/Modules/CLPP/Clpp.css
+++ b/src/Modules/CLPP/Clpp.css
@@ -11,7 +11,7 @@
     position: fixed;
     right: var(--vSpaceLg);
     bottom: var(--vSpaceLg);
-    width: calc(100% - (var(--vSpaceLg)*2));
+    /* width: calc(100% - (var(--vSpaceLg)*2)); */
     max-width: 550px;
 }
 #moduleCLPP>div{
@@ -25,6 +25,10 @@
     box-shadow: 0px 0px var(--vSpaceLg)  var(--vSecondaryColor);
     color:var(--vSecondaryColor);
     font-size: clamp(2px, calc(0.8rem + 4vw + 4vh), 28px) !important;
+}
+
+.cardContactBtn {
+    width: calc(100% - (var(--vSpaceLg)*2));
 }
 
 .cardContact{
