--- a/src/App.css
+++ b/src/App.css
@@ -130,8 +130,6 @@ header, nav {
 }
 
 
-
-
 #loginCustomForm {
   background-color: rgba(255, 255, 255, 1);
 }
@@ -151,8 +149,8 @@ header, nav {
   align-items: center;
   justify-content: center;
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 .ModalBgWhite {
