Adjusted file Chat

--- a/src/Modules/CLPP/Clpp.css
+++ b/src/Modules/CLPP/Clpp.css
@@ -110,3 +110,7 @@
 #divWindowsMessage>i {
     font-size: clamp(2px, calc(0.15rem + 1vw + 1vh), 10px) !important;
 }
+
+#divMessageFile > a > i{
+    font-size: clamp(25px, calc(1.5rem + 3vw + 3vh), 75px) !important;
+}
