--- a/src/Modules/GTPP/ComponentsCard/Avatar/AvatarGroup.css
+++ b/src/Modules/GTPP/ComponentsCard/Avatar/AvatarGroup.css
@@ -55,7 +55,8 @@ input[type="checkbox"]:checked + .checkbox-label {
 }
 
 .avatar-green {
-  border: 3px solid rgb(2, 165, 2);
+  /*border: 3px solid rgb(2, 165, 2);*/
+  border: 1px solid gray;
 }
 
 .avatar img {
