--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -11,6 +11,70 @@
     }
 }
 
+/* .floating-line {
+    position: absolute;
+    top: 20%; 
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    padding: 10px 15px;
+    border-radius: 15px;
+    display: inline-flex;
+    align-items: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .line-arrow {
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #f9f9f9;
+  }
+  
+  .line-content {
+    font-size: 14px;
+    color: #333;
+  } */
+  
+
+  .cloud-balloon {
+    position: absolute;
+    top: 20%; 
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    padding: 15px 30px;
+    border-radius: 30px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    display: inline-block;
+    z-index: 1000;
+  }
+  
+  .cloud-arrow {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-285px) translateY(-42px) rotate(89deg);
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid #f9f9f9;
+  }
+  
+  .cloud-content {
+    font-size: 14px;
+    color: #333;
+  }
+
 .zIndex99 {
     background-color: #0000006e;
     position: absolute;
@@ -89,6 +153,8 @@
         height: 400px;
     }
 }
+
+
 
 
 /* Ajustes de posicionamento em telas menores */
