--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -4,45 +4,11 @@
     margin-top: 5px;
 }
 
-/* Media queries para responsividade */
 @media screen and (max-width: 768px) {
     .modal-card-default {
-        width: 100%; /* Ajusta para ocupar toda a largura em telas menores */
+        width: 100%;
     }
-}
-
-/* .floating-line {
-    position: absolute;
-    top: 20%; 
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #f9f9f9;
-    border: 1px solid #ccc;
-    padding: 10px 15px;
-    border-radius: 15px;
-    display: inline-flex;
-    align-items: center;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-  }
-  
-  .line-arrow {
-    position: absolute;
-    top: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 0;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid #f9f9f9;
-  }
-  
-  .line-content {
-    font-size: 14px;
-    color: #333;
-  } */
-  
+} 
 
   .cloud-balloon {
     position: absolute;
@@ -108,14 +74,14 @@
     left: 0%;
 }
 
-/* Ajusta o posicionamento para telas menores */
+
 @media screen and (max-width: 768px) {
     .cardUser {
-        width: 20%; /* Tornar os cartões maiores para facilitar o toque */
+        width: 20%;
     }
 
     .cardUser:hover {
-        width: 100%; /* Expande o cartão para toda a largura */
+        width: 100%;
     }
 }
 
@@ -127,14 +93,10 @@
 }
 
 .taskGtpp {
-    height: 570px;
+    /* max-height: 450px;
+    height: clamp(400px, 100%, calc(100% - 550px)); */
+    height: 450px;
 }
-
-/* @media screen and (min-height: 974px) {
-    .taskGtpp {
-        height: 470px;
-    }
-} */
 
 @media screen and (max-width: 920px) {
     .box-dialog {
@@ -156,12 +118,10 @@
 
 
 
-
-/* Ajustes de posicionamento em telas menores */
 @media screen and (max-width: 768px) {
     .position-box-users {
         top: 90%;
-        left: 50%; /* Centraliza em telas menores */
+        left: 50%;
         transform: translateX(-50%);
     }
 
@@ -176,7 +136,6 @@
         height: 370px;
     }
 
-    /* AQUI FICA O ESTILO E A POSIÇÃO DA LISTA DE COLABORADORES */
     .portrait {
         left: 2% !important;
         height: 510px !important;
