--- a/src/Modules/GTPP/Gtpp.css
+++ b/src/Modules/GTPP/Gtpp.css
@@ -20,6 +20,18 @@
     margin-top: 5px !important;
 }
 
+.filter-style {
+    padding: 0px;
+    margin-left: 15px;
+}
+
+@media screen and (max-width: 768px) {
+    .filter-style {
+        padding: 0px;
+        margin-left: 30px;
+    }
+}
+
 .form-register label {
     width: 100%;
 }
