ajusted nev bar

--- a/src/App.css
+++ b/src/App.css
@@ -109,12 +109,13 @@ header, nav {
   overflow: auto;
 }
 
-.App>section>div>div>#navGipp {
+#navGipp {
   font-size: clamp(20px, calc(0.2rem + 0.5vw + 0.5vh), 26px) !important;
   border-right: solid clamp(1px, calc(0.2rem + 0.5vw + 0.5vh), 2px) #c1c2c6;
+  height: 100%;
 }
 
-.App>section>div>div>#navGipp a:hover {
+#navGipp a:hover {
   color: var(--vThirdColor) !important;
 }
 
