--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -47,7 +47,7 @@
     left: 0;
     top:0;
     width: 100vw !important;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     overflow: hidden;
