--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -12,16 +12,10 @@
 
   .cloud-balloon {
     position: absolute;
-    top: 20%; 
-    left: 50%;
-    transform: translateX(-50%);
+    top: 0%;  
+    max-height: 100%;
     background-color: #f9f9f9;
-    border: 1px solid #ccc;
-    padding: 15px 30px;
-    border-radius: 30px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    display: inline-block;
-    z-index: 1000;
   }
   
   .cloud-arrow {
