--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -12,10 +12,10 @@
 
   .cloud-balloon {
     position: absolute;
-    top: 0%;  
+    top: 50%;  
     max-height: 100%;
     background-color: #f9f9f9;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
   }
   
   .cloud-arrow {
