--- a/src/Modules/GTPP/ComponentsCard/CheckboxList/Style.css
+++ b/src/Modules/GTPP/ComponentsCard/CheckboxList/Style.css
@@ -1,14 +1,7 @@
 .checkbox-list {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    width: 210px;
-    height: 300px;
-    overflow: auto;
-    border: 1px solid #e0e0e0;
-    padding: 16px;
-    border-radius: 8px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
   }
   
   .checkbox-item {
