--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -68,8 +68,18 @@
 }
 
 .boxListCheck {
-    top: 100%;
+    top: 0%;
     left: 0%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    min-height: 25%;
+    height: auto;
+    max-height: 75%;
+    min-width: 25%;
+    width: auto;
+    max-width: 75%;
 }
 
 
