--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -101,6 +101,16 @@
     z-index: 1;
 }
 
+.expandFullScreen{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background: white;
+    left: 0;
+    top: 0;
+    height: 100% !important;
+    padding: 2%;
+}
 
 @media screen and (max-width: 768px) {
     .position-box-users {
