--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -109,7 +109,16 @@
     left: 0;
     top: 0;
     height: 100% !important;
+    width: 100% !important;
     padding: 2%;
+    animation: expandToTop 2s ease-in-out forwards; /* 2 segundos para a animação */
+}
+
+@keyframes expandToTop {
+    0% {
+        top: 38.5%; /* Posição inicial (75% da altura do modal) */
+    }
+    
 }
 
 @media screen and (max-width: 768px) {
