--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -13,6 +13,8 @@
   .cloud-balloon {
     position: absolute;
     top: 50%;  
+    left:50%;
+    transform: translate(-50%, -50%);
     max-height: 100%;
     background-color: #f9f9f9;
     box-shadow: 0px 0px 20px rgb(0, 0, 0);
