--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('./Color.css');
+
 * {
   margin: 0;
   padding: 0;
@@ -71,7 +72,8 @@ button {
   font-size: var(--font-size-button);
 }
 
-input, textarea {
+input,
+textarea {
   font-size: var(--font-size-input);
 }
 
@@ -79,7 +81,8 @@ blockquote {
   font-size: var(--font-size-blockquote);
 }
 
-ul, ol {
+ul,
+ol {
   font-size: var(--font-size-list);
 }
 
@@ -87,10 +90,21 @@ footer {
   font-size: var(--font-size-footer);
 }
 
-header, nav {
+header,
+nav {
   font-size: var(--font-size-header);
 }
 
+#root {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.App-header>div {
+  width: calc(100% - 96px);
+}
 
 .App {
   display: flex;
@@ -102,6 +116,15 @@ header, nav {
 
 .App>header {
   background-color: var(--vPrimaryColor);
+}
+
+.App>header h1 {
+  white-space: nowrap;
+  /* Impede a quebra de linha */
+  overflow: hidden;
+  /* Esconde o texto que ultrapassa o espaço */
+  text-overflow: ellipsis;
+  /* Adiciona "..." ao final do texto */
 }
 
 .App>section {
