--- a/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
+++ b/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
@@ -20,12 +20,27 @@
     width: clamp(0.9rem, 100vw, 250px);
     /* width: 100%; */
     
-    padding: 0.35rem 1rem;
+    padding: 0.7rem 1rem;
     
     /* position: sticky;
     top: 0;
     z-index: 10;
     border-radius: 6px 6px 0 0; */
+}
+
+.font-filter-button {
+    background-color: #2B2E4A;
+    color: #fff;
+    font-weight: bold;
+    transition: all ease 1s;
+    font-size: 10px;
+
+    &:hover {
+        background-color: #f8f9fa;
+        font-weight: bold;
+        color: #2B2E4A;
+        transition: all ease-out 0.5s;
+    }
 }
 
 .columnTaskState-title h1 {
