--- a/src/Modules/GTPP/ComponentsCard/CardTask/CardTask.css
+++ b/src/Modules/GTPP/ComponentsCard/CardTask/CardTask.css
@@ -16,7 +16,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     background-color: var(--modal-overlay-color);
     display: flex;
     justify-content: center;
