--- a/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
+++ b/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
@@ -77,6 +77,6 @@
     }
 
     .columnTaskState-container {
-        max-height: clamp(1vh, 66vh, calc(100vh - 20vh));
+        max-height: clamp(1vh, 66vh, calc(100dvh - 20vh));
     }
 }
