--- a/src/Modules/GTPP/Root-font.css
+++ b/src/Modules/GTPP/Root-font.css
@@ -1,4 +1,4 @@
-::root {
+:root {
     /* Tamanhos de fonte escaláveis baseados no viewport para todos os tipos de texto */
         
     /* Corpo de texto padrão */
