--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,24 @@ legend {
   margin: 0px;
   padding: 0px;
   color: var(--vTitleColor) !important;
-  font-size: clamp(20px, calc(0.2rem + 0.5vw + 0.5vh), 26px) !important;
+  font-size: clamp(12px, calc(0.2rem + 0.5vw + 0.5vh), 16px) !important;
 }
 
 body {
   font-size: var(--font-size-body);
   height: 100dvh;
 }
+
+body span {
+  font-size: var(--font-size-p);
+}
+
+label>div,
+nav span,
+button > i {
+  font-size: var(--font-size-button) !important;
+}
+
 
 p {
   font-size: var(--font-size-p);
@@ -88,6 +99,10 @@ footer {
 header,
 nav {
   font-size: var(--font-size-header);
+}
+
+button>label {
+  font-size: clamp(20px, calc(0.2rem + 0.5vw + 0.5vh), 24px) !important;
 }
 
 #root {
@@ -196,7 +211,7 @@ nav {
   /* Animação aplicada */
 }
 
-.photoCircle{
+.photoCircle {
   width: clamp(50px, calc(0.8rem + 4vw + 4vh), 55px);
   height: clamp(50px, calc(0.8rem + 4vw + 4vh), 55px);
 }
