--- a/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
+++ b/src/Modules/GTPP/ComponentsCard/ColumnTask/columnTaskState.css
@@ -4,7 +4,7 @@
 .columnTaskState-container {
     width: 100%;
     height: 100%;
-    max-height: 68vh;
+    max-height: 64vh;
     overflow-y: auto;
     overflow-x: hidden;
     border: 1px solid #b5b5b53e;
@@ -61,7 +61,7 @@
 }
 
 /* Responsividade para dispositivos móveis */
-@media (max-height: 668px) {
+/* @media (max-height: 668px) {
     .columnTaskState-container {
         max-height: 58vh;
     }
@@ -77,9 +77,9 @@
     .columnTaskState-container {
         max-height: 70vh;
     }
-}
+} */
 
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
     .columnTaskState-container {
         max-width: 400px;
     }
@@ -87,4 +87,4 @@
     .columnTaskState-container {
         max-height: clamp(1vh, 66vh, calc(100dvh - 20vh));
     }
-}
+} */
