estou enviando algumas outras coisas

--- a/src/Modules/GAPP/Component/style/style.css
+++ b/src/Modules/GAPP/Component/style/style.css
@@ -9,7 +9,12 @@
 }
 
 .colorSystem:hover {
-    background-color: #000;
+    background-color: #555555;
+    transition: all ease .9s;
+    i {
+        color: var(--vPrimaryColor) !important;
+        transition: all ease .5s;
+    }
 }
 
 .colorSystemLightGray {
