--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ legend {
   margin: 0px;
   padding: 0px;
   color: var(--vTitleColor) !important;
-  font-size: clamp(20px, calc(0.2rem + 0.5vw + 0.5vh), 26px) !important;
+  font-size: clamp(20px, calc(0.2rem + 0.5vw + 0.5vh), 26px);
 }
 
 body {
