--- a/src/Modules/GTPP/ComponentsCard/Modal/style.css
+++ b/src/Modules/GTPP/ComponentsCard/Modal/style.css
@@ -8,19 +8,30 @@
     .modal-card-default {
         width: 100%;
     }
-} 
+}
 
-  .cloud-balloon {
+.cloud-balloon {
+    display: flex;
+    z-index: 1;
+    flex-direction: column;
     position: absolute;
-    top: 50%;  
-    left:50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    max-height: 100%;
+    max-height: 60%;
+    max-width: 60%;
     background-color: #f9f9f9;
     box-shadow: 0px 0px 20px rgb(0, 0, 0);
-  }
-  
-  .cloud-arrow {
+}
+
+.cloud-balloon > div{
+    background-color: white;
+    padding: 2%;
+    overflow-y: auto;
+    white-space:pre-wrap
+}
+
+.cloud-arrow {
     position: absolute;
     top: 100%;
     left: 50%;
@@ -30,24 +41,24 @@
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
     border-top: 15px solid #f9f9f9;
-  }
-  
-  .cloud-content {
+}
+
+.cloud-content {
     font-size: 14px;
     color: #333;
-  }
+}
 
 .zIndex99 {
     background-color: #0000006e;
     position: absolute;
     left: 0;
-    top:0;
+    top: 0;
     width: 100vw !important;
     height: 100%;
     display: flex;
     justify-content: center;
     overflow: hidden;
-    margin:0px !important;
+    margin: 0px !important;
 }
 
 
@@ -75,7 +86,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+
     min-height: 25%;
     height: auto;
     max-height: 75%;
@@ -103,7 +114,7 @@
     z-index: 1;
 }
 
-.expandFullScreen{
+.expandFullScreen {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -113,14 +124,16 @@
     height: 100% !important;
     width: 100% !important;
     padding: 2%;
-    animation: expandToTop 1s ease-in-out forwards; /* 2 segundos para a animação */
+    animation: expandToTop 1s ease-in-out forwards;
+    /* 2 segundos para a animação */
 }
 
 @keyframes expandToTop {
     0% {
-        top: 38.5%; /* Posição inicial (75% da altura do modal) */
+        top: 38.5%;
+        /* Posição inicial (75% da altura do modal) */
     }
-    
+
 }
 
 @media screen and (max-width: 768px) {
