--- a/src/Modules/GAPP/Component/style/style.css
+++ b/src/Modules/GAPP/Component/style/style.css
@@ -20,6 +20,11 @@
     max-width: 100vw;
     width: 100%;
     margin: 0 auto;
+    height: 90vh;
+}
+
+.form-style-modal {
+    height: fit-content;
 }
 
 
