--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,12 @@ legend {
   font-size: clamp(20px, calc(0.2rem + 0.5vw + 0.5vh), 26px);
 }
 
+@media screen and (max-width: 460px) {
+  input {
+    font-size: clamp(5px, 100%, 16px) !important; 
+  }
+}
+
 body {
   font-size: var(--font-size-body);
   height: 100dvh;
